# Todo-Axum

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: CI.yml
.sqlx/: query-53591c632d0ad18c75fab7068cb78bb131e58d3b866385a378108fd4075473b2.json  query-8c8f1e1519e8dae3315016115d9408f6bbf4ba16dca217882a2cea61b511fb81.json
api-gateway/: Cargo.toml  Dockerfile
api-gateway/src/: main.rs  schema.rs
api-gateway/src/clients/: mod.rs  todo_client.rs
api-gateway/src/resolvers/: mod.rs  todo_resolver.rs
proto/: todo.proto
shared/: .env  Cargo.toml
shared/src/: config.rs  db.rs
todo-management-service/: .env  Cargo.toml  Dockerfile  build.rs
todo-management-service/.sqlx/: query-4b93f7ce540459258bc1e7d46b6ab8ec301fb4159fe3bb05860de3de49b892ba.json  query-b7a2e9c34987d43a601f7aef3ad3e8097460c134c2018e650b571bc11175caeb.json  query-c7d6fc68aa3370c5c0904c0639abe98310e103bb91b6a338b35cb36bd166bbd4.json
todo-management-service/migrations/: 20241011044530_todo_schema.up.sql
todo-management-service/src/: db.rs  error.rs  main.rs  model.rs  repository.rs  service.rs
user-management-service/: Cargo.toml
