[workspace]
members = [ "api-gateway","shared", "todo-management-service", "user-management-service"]
resolver = "2"

[workspace.dependencies]
axum = "0.7.7"
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "postgres", "chrono", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.19", features = ["serde"] }
tonic = "0.12.3"
prost = "0.13.3"
thiserror = "1.0.64"
dotenvy = "0.15.7"
